methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:14: error: type mismatch;
 found   : Unit
 required: Boolean
    prendBiscuit()
                ^SlugTracking:13: error: type mismatch;
 found   : Unit
 required: Boolean
  if(estSurBiscuit())
  ^