methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  while(estSurBiscuit()){
    if(!estFaceMur){
    	avance()
    } else gauche()
    if (getCouleurSol() != Color.green){
      recule()
      gauche()
      return true
    }
  }
  if(estSurBiscuit())
  	prendBiscuit()
}